# Ledger

./: .gitignore  CLAUDE.md  README.md  TODO.md  build-rust-android-vulkan.ps1  build-rust-android.ps1  gradle.properties  project.md
.claude/: settings.local.json
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ledger/app/: LedgerApp.kt  MainActivity.kt
app/src/main/java/com/ledger/app/data/: GemmaModelInfo.kt  GemmaModelRepository.kt  GemmaRepository.kt  ILedgerBridge.kt  LedgerBridge.kt  PreferencesRepository.kt  ReceiptOcrRepository.kt  SeedDataUtil.kt
app/src/main/java/com/ledger/app/data/di/: AppModule.kt
app/src/main/java/com/ledger/app/ui/components/: BottomNavBar.kt  LedgerActionDialog.kt  LedgerAmountField.kt  LedgerCalculatorSheet.kt  LedgerCard.kt  LedgerTextField.kt  LedgerTrendChart.kt  TransactionPill.kt
app/src/main/java/com/ledger/app/ui/navigation/: NavGraph.kt
app/src/main/java/com/ledger/app/ui/screens/: ActivityScreen.kt  AddCategoryScreen.kt  AddEditBudgetScreen.kt  AddEditDebtScreen.kt  AddGoalScreen.kt  AddRecurringScreen.kt  AddTransactionScreen.kt  AddWalletScreen.kt  AiModelScreen.kt  AnnualSummaryScreen.kt  AppearanceSettingsScreen.kt  (+42 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
core/: Cargo.toml  build.rs
core/.cargo/: config.toml
core/src/: ledger.udl  lib.rs  llama.rs
core/src/db/: mod.rs  models.rs
core/src/llama_c/: llama_simple.cpp  llama_simple.h
gradle/: libs.versions.toml
(+20 files in other folders)
