[package]
name = "ledger-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "uniffi_ledger"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
# Async runtime
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
# UniFFI bindings generator
uniffi = { version = "0.28", features = ["tokio", "cli"] }
# Error handling
thiserror = "1"
# Logging
log = "0.4"
android_logger = "0.14"
# UUID generation
uuid = { version = "1", features = ["v4"] }
# Time
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi_bindgen.rs"

[features]
# Enable Vulkan GPU backend (experimental). Build with: cargo build --features vulkan
vulkan = []

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
cc      = "1"
cmake   = "0.1"

[dev-dependencies]
uniffi = { version = "0.28", features = ["bindgen-tests"] }
